objects/NationalParks__c.object
<CustomObject>
    <description>Created by AppSheet</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recreation_Visitors_20136__c</fullName>
        <label>Recreation Visitors (2013)[6]</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visited?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wikipedia_URL__c</fullName>
        <label>Wikipedia URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Year_Established__c</fullName>
        <label>Year Established</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>NationalParks</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NationalParkss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>